--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "dependencies": {
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
+    "critters": "^0.0.23",
     "next": "^15.5.2",
+    "next-sitemap": "^4.2.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   }
