--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,31 +1,83 @@
 {
   "name": "Silverados Dog Park",
   "short_name": "Silverados",
-  "description": "Where dogs, live music, and cold drinks meet in perfect harmony",
+  "description": "Where dogs, live music, and cold drinks meet in perfect harmony. Family-friendly dog park with live entertainment in Black Mountain, NC.",
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
+  "orientation": "portrait-primary",
   "background_color": "#f8fafc",
-  "theme_color": "#2563eb",
+  "theme_color": "#1e40af",
+  "categories": ["entertainment", "lifestyle", "sports"],
+  "lang": "en-US",
+  "dir": "ltr",
+  "prefer_related_applications": false,
   "icons": [
     {
       "src": "/favicon-16x16.png",
       "sizes": "16x16",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/favicon-32x32.png",
       "sizes": "32x32",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/android-chrome-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/android-chrome-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
-  ]
+  ],
+  "shortcuts": [
+    {
+      "name": "Live Events",
+      "short_name": "Events",
+      "description": "View upcoming live music events",
+      "url": "/events",
+      "icons": [
+        {
+          "src": "/favicon-32x32.png",
+          "sizes": "32x32"
+        }
+      ]
+    },
+    {
+      "name": "Menu",
+      "short_name": "Menu",
+      "description": "View our drink and food menu",
+      "url": "/menu",
+      "icons": [
+        {
+          "src": "/favicon-32x32.png",
+          "sizes": "32x32"
+        }
+      ]
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "/og.jpg",
+      "sizes": "1200x630",
+      "type": "image/jpeg",
+      "form_factor": "wide"
+    }
+  ],
+  "features": [
+    "Cross Platform",
+    "Fast",
+    "Works Offline"
+  ],
+  "edge_side_panel": {
+    "preferred_width": 400
+  }
 }
